	* Incremented the package version to 0.9.5.
2014-07-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a typo in 'INSTALL'.
2014-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'amand/amand.cpp' that caused syslog to report
	successful DB mode switch even when the operation was actually
	unsuccessful.
2014-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'amand/streamcmdserver.cpp' that caused a
	segfault when attempting to reuse a stale client connection.
2014-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.6.
2014-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Renamed 'configure.in' 'configure.ac'.
	* Modernized invocation of AC_INIT() and AM_INIT() in
	'configure.ac'.
2014-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'make rpm' to use home directory based build
	tree in 'Makefile.am'.
2014-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.7.
2014-09-23 Fred Gleason <fredg@paravelsystems.com>
	* Added code to update the GTK icon cache in 'aman.spec.in'.
2014-09-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a fencepost error when deleting relay bin files in
	'amand/auto_rotate.cpp'.
2014-09-23 Fred Gleason <fredg@paravelsystems.com>
	* Added instructions for populating the host key in 'INSTALL'.
2014-09-23 Fred Gleason <fredg@paravelsystems.com>
	* Added include for 'unistd.h' in 'lib/config.cpp' to fix broken
	compilation under RHEL 7.
	* Added includes for 'sys/types.h' and 'unistd.h' in 'aman/aman.cpp'
	to fix broken compilation under RHEL 7.
	* Added include for 'unistd.h' in 'lib/connection.cpp' to fix broken
	compilation under RHEL 7.
	* Added include for 'unistd.h' in 'amand/generate_snapshot.cpp' to
	fix broken compilation under RHEL 7.
	* Fixed a buffer overflow error in 'amand/pingmonitor.cpp'.
	* Added include for 'unistd.h' in 'amand/restore_snapshot.cpp' to
	fix broken compilation under RHEL 7.