@@ -187,3 +187,5 @@
 	* Fixed a buffer overflow error in 'amand/pingmonitor.cpp'.
 	* Added include for 'unistd.h' in 'amand/restore_snapshot.cpp' to
 	fix broken compilation under RHEL 7.
+2014-09-23 Fred Gleason <fredg@paravelsystems.com>
+	* Updated 'get_distro.sh' and 'get_target.sh'.
